Fix issue with z-index for slide over and input plus select

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -360,7 +360,7 @@
         @apply focus:ring-4 focus:ring-purple-500 focus:ring-opacity-20 focus:ring-offset-2  focus:border focus:border-gray-200;
     }
     .myPrimaryInput {
-        @apply block pr-8 text-left bg-white w-full sm:text-sm font-normal text-myPrimaryDarkGrayColor placeholder:font-normal placeholder:accent-gray-400  focus:bg-white rounded-md py-3 px-3  border border-gray-200 shadow-sm focus:outline-none myPrimaryFormFocus;
+        @apply block pr-8 text-left bg-white w-full sm:text-sm font-normal text-myPrimaryDarkGrayColor placeholder:font-normal placeholder:accent-gray-400  focus:bg-white rounded-md py-3 px-3  border border-gray-200 shadow-sm focus:outline-none myPrimaryFormFocus h-full;
     }
     .myPrimaryInputReadonly {
         @apply myPrimaryInput bg-gray-50 focus:ring-0 focus:bg-gray-100 focus:border-myPrimaryMediumGrayColor;
